# waveome

./: .gitignore  Gaussian_Process_Sampling.ipynb  README.md  pyproject.toml  setup.py  waveome_overview.ipynb
docs/: INSTALL.md
examples/Breastmilk/: Breastmilk.ipynb  breastmilk_infant_Metabolites_Poisson.ipynb  breastmilk_infant_metabolites_Poisson.ipynb  infant_microbiome.csv  newdata.xlsx
examples/Breastmilk/data/: data.xlsx  infant_metabolite.tsv  infant_metadata.csv  infant_microbiome.csv  newdata.xlsx  stool_metadata.csv
examples/CD4/: CD4.ipynb
examples/CD4/data/: HIVRNA149.txt
examples/HMP2/: GP_HMP2_MBX_example.ipynb  Longitudinal Metadata Analysis.ipynb
examples/HOT/: microbiome.csv
examples/Insulin_omics/: waveome_insulin.ipynb
examples/Marine_microbiome/: 16S_environment_microbiome_antibiotic_treatments.ipynb  wavome_marine.ipynb
examples/Marine_microbiome/Figures/: Heatmap.eps  Parts_plot_Abiotrophia_defectiva_ATCC_49176.eps  Parts_plot_Acanthamoeba_polyphaga_mimivirus.eps  Parts_plot_Acanthocystis_turfacea_Chlorella_virus_1.eps  Parts_plot_Acaryochloris.eps
examples/Marine_microbiome/data/: metadata.csv  tax_table.csv
examples/Marine_microbiome/output/: gps_object.pkl
examples/Sleeve_surgery/: Sleeve.ipynb  gps_Amino.pkl  gps_microbe.pkl
examples/Sleeve_surgery/output/: gps_Lipid.pkl
examples/iHMP/: GP Overview.ipynb  GP_HMP2_MBX_example.ipynb  Simulated Example.ipynb  iHMP Data Overview.ipynb  iHMP_data_merging.ipynb  ihmp_waveome.ipynb  ihmp_waveome_hpc_run.py  ihmp_waveome_hpc_script.sh  map_estimates.pickle  multioutput_ihmp.ipynb
examples/iHMP/data/: iHMP_labeled_metabolomics.csv  iHMP_merge.csv
examples/simulations/: penalized_regression.ipynb  sim_evaluations.ipynb  sim_waveome_hpc_run.py  sim_waveome_hpc_script.sh  simple_regression_different_models.ipynb
examples/swan/: subset_data.txt  swan_waveome.ipynb
kernel_learning/: data_generation.ipynb  gp_fitting.ipynb  gpflow_basic.ipynb  gpflow_basic_colab.ipynb  helper_functions.py  iHMP_kernel_search.ipynb  iHMP_kernel_search.py  kernel_search.ipynb  severity_search.py  simulated_data.csv  simulation_search.ipynb  simulation_test.py  unit_vs_rate_simulation.py
kernel_learning/.ipynb_checkpoints/: gpflow_basic-checkpoint.ipynb  simulated_data-checkpoint.csv
multioutput/: ihmp_multioutput.ipynb  multioutput_examples.ipynb  multioutput_examples_saturated.ipynb  multioutput_simulation.ipynb  results_summary.md
multioutput/benchmarks/: REPRODUCIBILITY.md  environment.yml  environment_linux.yml  install_r_deps.R  simulation_visualization.ipynb
multioutput/benchmarks/simulation/: core.py  effects.py  main.py  methods.py  plot_simulation_overview.py  plots.py  utils.py
multioutput/benchmarks/simulation/experiments/: SIMULATION_SUMMARY.md  SNR_PARAMETER_JUSTIFICATION.md  aggregate_results.py  diagnose_ablation.py  run_difficult.bash  (+8 more)
waveome/: __init__.py  kernels.py  likelihoods.py  model_classes.py  model_fitting.py  model_search.py  model_types_DEPR.py  predictions.py  regularization.py  utilities.py
(+4 files in other folders)
