[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveome"
version = "0.1.0"
description = "Automated longitudinal data analysis using Gaussian processes."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }
authors = [
    { name="Allen Ross", email="allenross@gwu.edu" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

dependencies = [
    "tensorflow>=2.12.0,<2.16.0",
    "tensorflow_probability>=0.20.0,<0.24.0",
    "gpflow==2.9.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ray[default]",
    "scipy>=1.11.0",
    "joblib",
    "seaborn",
    "matplotlib",
    "tqdm",
    "setuptools>=65.5.1,<66.0.0", # Pin to version for gpflow pkg_resources warning
    "psutil"
]

[project.urls]
Homepage = "https://github.com/omicsEye/waveome"
"Bug Tracker" = "https://github.com/omicsEye/waveome/issues"