[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveome"
version = "0.1.3"
description = "Automated longitudinal data analysis using Gaussian processes."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }
authors = [
    { name="Allen Ross", email="allenross@gwu.edu" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

dependencies = [
    # Pinned for tensorflow-probability and gpflow compatibility
    "tensorflow>=2.12.0,<2.16.0",
    "tensorflow_probability>=0.20.0,<0.24.0",
    # Pin to specific version to avoid pkg_resources warning
    "gpflow==2.9.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ray[default]",
    # 1.13+ triggers recursion bug with numpy 1.26.x (numpy/issues/24702)
    "scipy>=1.11.0,<1.13.0",
    "joblib",
    "seaborn",
    "matplotlib",
    "tqdm",
    # Pin to prevent pkg_resources deprecation warning from gpflow
    "setuptools>=65.5.1,<66.0.0",
    "psutil"
]

[project.urls]
Homepage = "https://github.com/omicsEye/waveome"
"Bug Tracker" = "https://github.com/omicsEye/waveome/issues"